# Imfind

./: CMakeLists.txt  README.md
database/: classic.csv  hist2d.csv
include/: features.h  im2csv.h  metrics.h
src/: features.cpp  im2csv.cpp  main.cpp  metrics.cpp
